--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "docker-up": "docker-compose -f docker-compose.yml up -d --build --force-recreate",
     "docker-down": "docker-compose -f docker-compose.yml down",
     "docker-stop": "docker-compose -f docker-compose.yml stop",
-    "client-install": "cd client && yarn run build",
-    "server-install": "cd server && yarn run build",
+    "client-install": "cd client && yarn install",
+    "server-install": "cd server && yarn install",
+    "client-build": "cd client && yarn run build",
+    "server-build": "cd server && yarn run build",
     "start-client-build": "cd client && yarn run start",
     "start-server-build": "cd server && yarn run start",
     "preInstall": "concurrently \"yarn run client-install\" \"yarn run server-install\"",
