added volume in docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       - ALLOW_EMPTY_PASSWORD=yes
     networks:
       - backend_net
+    volumes:
+      - /usr/src/app/data:/bitnami/redis/data
 
 networks:
   frontend_net:
