--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "short-uuid": "^4.2.0",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
