--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,11 @@
     "build": "rm -rf dist && tsc",
     "build-legacy": "rm -rf dist && tsc && cp package*.json dist && cp Dockerfile dist && npm ci --prefix dist --production",
     "lint": "eslint . --max-warnings 0",
-    "format": "pretty-quick --staged"
+    "format": "pretty-quick --staged",
+    "db:create": "npx sequelize db:create --config=/src/config",
+    "db:drop": "npx sequelize db:drop --config=/src/config",
+    "db:migrate": "npx sequelize db:migrate --migrations-path=/src/migrations --config=/src/config",
+    "db:migrate:undo:all": "npx sequelize db:migrate:undo:all --migrations-path=/src/migrations --config=/src/config"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
@@ -24,6 +28,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.23",
     "@types/sha1": "^1.1.3",
+    "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "chai": "^4.3.6",
@@ -35,16 +40,23 @@
     "nyc": "^15.1.0",
     "prettier": "^2.6.1",
     "pretty-quick": "^3.1.3",
+    "sequelize-cli": "^6.4.1",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
     "ioredis": "^5.2.2",
     "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.21.4",
+    "sequelize-typescript": "^2.1.3",
+    "short-uuid": "^4.2.0",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
     "winston": "^3.6.0"
