--- a/server/src/config/config.json
+++ b/server/src/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
+    "password": "619619eric",
+    "database": "test_db_1",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": null,
+    "password": "619619eric",
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": null,
+    "password": "619619eric",
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
