--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,18 +1,24 @@
-FROM public.ecr.aws/bitnami/node:12
+FROM public.ecr.aws/bitnami/node:14
 
 WORKDIR /usr/src/app
 
 # copy packge lock over
 COPY package*.json ./
 
+# copy tsconfig
+COPY tsconfig.json ./
+
 # run clean install production
-RUN npm ci --production
+RUN npm install
+
+COPY . .
 
 # build dist
 RUN npm run build
 
-# only copy dist over
-COPY /dist ./
+COPY /dist .
+
+EXPOSE 5002
 
 # run node index.js
-CMD [ "node", "index.js" ]
+CMD [ "npm", "run", "start-build" ]
