--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "test:me": "ts-mocha -p tsconfig.json --timeout 10000 ./tests/socket.spec.ts",
     "coverage": "nyc npm run test",
     "build": "rm -rf dist && tsc",
+    "start-build": "node ./dist/index.js",
     "build-legacy": "rm -rf dist && tsc && cp package*.json dist && cp Dockerfile dist && npm ci --prefix dist --production",
     "lint": "eslint . --max-warnings 0",
     "format": "pretty-quick --staged",
