--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -15,12 +15,12 @@ RUN npm run build
 
 FROM nginx:alpine
 
-WORKDIR /usr/share/nginx/html
-
-RUN rm -rf ./*
-
 COPY --from=builder /usr/src/app/build .
 
-ENTRYPOINT [ "nginx", '-g', 'daemon off;' ]
+RUN rm /etc/nginx/conf.d/default.conf
+
+COPY nginx.conf /etc/nginx/conf.d
+
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
 
 
