--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,14 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:80"
+    expose:
+      - "80"
     volumes:
       - frontend:/usr/src/app
     networks:
       - frontend_net
+    depends_on:
+      - server
   server:
     container_name: backend_server
     restart: always
@@ -42,6 +46,15 @@ services:
       - MYSQL_USER=user1
     volumes:
       - ./data:/var/lib/mysql
+  proxy:
+    image: nginx:alpine
+    container_name: app-proxy
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - 8080:80
+    depends_on:
+      - web
 
 networks:
   frontend_net:
