--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - frontend:/usr/src/app
     networks:
       - frontend_net
+      - proxy_net
     depends_on:
       - server
   server:
@@ -34,6 +35,7 @@ services:
       - backend:/usr/src/app
     networks:
       - backend_net
+      - proxy_net
     depends_on:
       - db
   db:
@@ -53,10 +55,13 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 8080:80
+    networks:
+      - proxy_net
     depends_on:
       - client
 
 networks:
+  proxy_net:
   frontend_net:
   backend_net:
     driver: bridge
