--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,8 @@ services:
     build:
       context: ./server
       dockerfile: Dockerfile
-    ports:
-      - "5002:5002"
+    expose:
+      - "5002"
     environment:
       - DB_NAME=test_db_1
       - DB_USER=root
