--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM public.ecr.aws/bitnami/node:14
+FROM public.ecr.aws/bitnami/node:14 as builder
 
 WORKDIR /usr/src/app
 
@@ -16,8 +16,22 @@ COPY . .
 # build dist
 RUN npm run build
 
+FROM public.ecr.aws/bitnami/node:14
+
+WORKDIR /usr/src/app
+
+COPY package*.json ./
+
+COPY tsconfig.json ./
+
+RUN npm install --only=production
+
+COPY --from=builder /usr/src/app/dist ./
+
 # expose port
 EXPOSE 5002
+
+ENV NODE_ENV=production
 
 RUN chmod +x startup.sh
 RUN npm i -g sequelize-cli
