--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -9,14 +9,12 @@ server {
         try_files $uri $uri/ /index.html =404;
     } 
 
-    error_page 404 /index.html;
-    location = / {
-        root /usr/share/nginx/html;
-        internal;
-    }
-
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+    location /api {
+        proxy_pass http://server:5002;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 }
