--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -35,10 +35,8 @@ EXPOSE 5002
 
 ENV NODE_ENV=production
 
-RUN chmod +x startup.sh
-RUN npm i -g sequelize-cli
 RUN npm i -g nodemon
 
 # run node index.js
 # CMD [ "npm", "run", "start-build" ]
-ENTRYPOINT [ "./startup.sh" ]
+ENTRYPOINT [ "node", "index.js" ]
