--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,16 +36,25 @@ services:
     networks:
       - backend_net
       - proxy_net
-  # db:
-  #   image: mysql
-  #   restart: always
-  #   environment:
-  #     - MYSQL_ROOT_PASSWORD=test1223
-  #     - MYSQL_PASSWORD=test1223
-  #     - MYSQL_DATABASE=test_db_1
-  #     - MYSQL_USER=user1
-  #   volumes:
-  #     - ./data:/var/lib/mysql
+    depends_on:
+      db:
+        condition: service_healthy
+  db:
+    image: mysql
+    restart: always
+    environment:
+      - MYSQL_ROOT_PASSWORD=test1223
+      - MYSQL_PASSWORD=test1223
+      - MYSQL_DATABASE=test_db_1
+      - MYSQL_USER=user1
+    ports:
+      - 3306:3006
+    volumes:
+      - ./data:/var/lib/mysql
+    healthcheck:
+      test: "mysql -uroot -p$$MYSQL_ROOT_PASSWORD  -e 'SHOW databases'"
+      interval: 10s
+      retries: 3
   proxy:
     image: nginx:alpine
     container_name: app-proxy
