--- a/server/.sequelizerc
+++ b/server/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require('path');
 
 module.exports = {
-  config: path.resolve(__dirname, 'src', 'config.js'),
-  'models-path': path.resolve(__dirname, 'src', 'db/models'),
-  'migrations-path': path.resolve(__dirname, 'src', 'migrations')
+  config: path.resolve(__dirname, 'config.js'),
+  'models-path': path.resolve(__dirname, 'db/models'),
+  'migrations-path': path.resolve(__dirname, 'migrations')
 };
