--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM public.ecr.aws/bitnami/node:14
+FROM public.ecr.aws/bitnami/node:14 AS builder
 
 WORKDIR /usr/src/app
 
@@ -16,6 +16,24 @@ COPY . .
 # build dist
 RUN yarn run build
 
+FROM public.ecr.aws/bitnami/node:14
+
+WORKDIR /usr/src/app
+
+COPY package*.json ./
+
+COPY tsconfig.json ./
+
+COPY .sequelizerc ./
+
+COPY startup.sh ./
+
+COPY ./src/migrations ./
+
+RUN yarn install
+
+COPY --from=builder /usr/src/app/dist ./
+
 # expose port
 EXPOSE 5002
 
@@ -28,35 +46,3 @@ RUN npm i -g nodemon
 # run node index.js
 # CMD [ "npm", "run", "start-build" ]
 ENTRYPOINT [ "./startup.sh"]
-
-
-# FROM public.ecr.aws/bitnami/node:14
-
-# WORKDIR /usr/src/app
-
-# COPY package*.json ./
-
-# COPY tsconfig.json ./
-
-# COPY .sequelizerc ./
-
-# COPY startup.sh ./
-
-# COPY src/migrations ./
-
-# RUN yarn install
-
-# COPY --from=builder /usr/src/app/dist ./
-
-# # expose port
-# EXPOSE 5002
-
-# ENV NODE_ENV=production
-
-# RUN chmod +x startup.sh
-# RUN npm i -g sequelize-cli
-# RUN npm i -g nodemon
-
-# # run node index.js
-# # CMD [ "npm", "run", "start-build" ]
-# ENTRYPOINT [ "./startup.sh"]
