--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16-alpine AS builder
+FROM node:16-alpine
 
 WORKDIR /usr/src/app
 
@@ -14,28 +14,28 @@ COPY . .
 
 RUN yarn run build
 
-FROM node:16-alpine
+# FROM node:16-alpine
 
-WORKDIR /usr/src/app
+# WORKDIR /usr/src/app
 
-COPY package.json ./
+# COPY package.json ./
 
-COPY yarn.lock ./
+# COPY yarn.lock ./
 
-RUN yarn install --production
+# RUN yarn install --production
 
-COPY --from=builder /usr/src/app/dist ./
+# COPY --from=builder /usr/src/app/dist ./
 
-USER node
+# USER node
 
-EXPOSE 5002
+# EXPOSE 5002
 
-ENV NODE_ENV=production
+# ENV NODE_ENV=production
 
-# RUN chmod +x startup.sh
-# RUN npm i -g sequelize-cli
-# RUN npm i -g nodemon
+# # RUN chmod +x startup.sh
+# # RUN npm i -g sequelize-cli
+# # RUN npm i -g nodemon
 
-# run node index.js
-# CMD [ "npm", "run", "start-build" ]
+# # run node index.js
+# # CMD [ "npm", "run", "start-build" ]
 ENTRYPOINT [ "node", "dist/index.js" ]
