updated docker and startup

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -26,16 +26,17 @@ RUN yarn run build
 
 # COPY --from=builder /usr/src/app/dist ./
 
-# USER node
+USER node
 
-# EXPOSE 5002
+EXPOSE 5002
 
-# ENV NODE_ENV=production
+ENV NODE_ENV=production
 
-# # RUN chmod +x startup.sh
-# # RUN npm i -g sequelize-cli
-# # RUN npm i -g nodemon
+RUN chmod +x startup.sh
+RUN npm i -g sequelize-cli
+RUN npm i -g nodemon
 
 # # run node index.js
 # # CMD [ "npm", "run", "start-build" ]
-ENTRYPOINT [ "node", "dist/index.js" ]
+# ENTRYPOINT [ "node", "dist/index.js" ]
+ENTRYPOINT [ "./startup.sh"]
