--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,8 @@ services:
       - "3306"
     volumes:
       - ./data:/var/lib/mysql
+    networks:
+      - backend_net
     healthcheck:
       test: "mysql -uroot -p$$MYSQL_ROOT_PASSWORD  -e 'SHOW databases'"
       interval: 10s
