--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,12 +44,11 @@ services:
       - MYSQL_DATABASE=test_db_2
     ports:
       - 3306:3306
-    expose:
-      - "3306"
-    # volumes:
-    #   - ./data:/var/lib/mysql
+    volumes:
+      - ./data:/var/lib/mysql
     networks:
       - backend_net
+      - proxy_net
     healthcheck:
       test: "mysql -uroot -p$$MYSQL_ROOT_PASSWORD  -e 'SHOW databases'"
       interval: 10s
