--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     build:
       context: ./server
       dockerfile: Dockerfile
+    ports:
+      - "5002:5002"
     expose:
       - "5002"
     environment:
