--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,10 +51,10 @@ services:
     networks:
       - backend_net
       - proxy_net
-    healthcheck:
-      test: "mysql -uroot -p$$MYSQL_ROOT_PASSWORD  -e 'SHOW databases'"
-      interval: 10s
-      retries: 3
+    # healthcheck:
+    #   test: "mysql -uroot -p$$MYSQL_ROOT_PASSWORD  -e 'SHOW databases'"
+    #   interval: 10s
+    #   retries: 3
   proxy:
     image: nginx:alpine
     container_name: app-proxy
