--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - DB_NAME=test_db_2
       - DB_USER=root
       - DB_PASS=test1223
-      - DB_HOST=127.0.0.1
+      - DB_HOST=db
     networks:
       - backend_net
       - proxy_net
