--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -3,6 +3,8 @@ server {
     # match this to your setup
     listen 80;
 
+    server_name peer-programming.ericzhang.xyz www.peer-programming.ericzhang.xyz
+
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
