--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,10 @@
 server {
   listen 80;
 
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
+
   location /api {
     proxy_pass http://server:5002;
     proxy_http_version 1.1;
@@ -27,4 +31,22 @@ server {
     proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
   }
+}
+
+server {
+    listen 443 ssl;
+    server_name example.org;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        proxy_pass  http://example.org;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
 }
