--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -4,6 +4,7 @@ server {
     listen 80;
 
     location / {
+        proxy_pass http://client:8080;
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html =404;
