--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -2,12 +2,21 @@ server {
 
     # match this to your setup
     listen 80;
+    listen [::]:80;
 
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html =404;
     } 
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://example.org$request_uri;
+    }
 
     location /test {
         proxy_pass http://server:5002;
