--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,16 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile
+    ports:
+      - 3000:80
+      - 5000:443
     networks:
       - frontend_net
       - proxy_net
     depends_on:
       - server
+    volumes:
+      - ./certbot/www:/var/www/certbot/:ro
   server:
     container_name: backend_server
     restart: always
@@ -53,6 +58,11 @@ services:
       test: "mysql -uroot -p$$MYSQL_ROOT_PASSWORD  -e 'SHOW databases'"
       interval: 10s
       retries: 3
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
   # proxy:
   #   image: nginx:alpine
   #   container_name: app-proxy
