--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -19,9 +19,9 @@ FROM nginx:alpine
 
 COPY --from=builder /usr/src/app/build /usr/share/nginx/html
 
-# RUN rm /etc/nginx/conf.d/default.conf
+RUN rm /etc/nginx/conf.d/default.conf
 
-# COPY nginx.conf /etc/nginx/conf.d
+COPY nginx.conf /etc/nginx/conf.d
 
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
 
