--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       context: ./client
       dockerfile: Dockerfile
     ports:
-      - "80:80"
+      - "8080:80"
     expose:
-      - "80"
+      - "8080"
     networks:
       - frontend_net
       - proxy_net
@@ -57,19 +57,18 @@ services:
       test: "mysql -uroot -p$$MYSQL_ROOT_PASSWORD  -e 'SHOW databases'"
       interval: 10s
       retries: 3
-  # proxy:
-  #   image: nginx:alpine
-  #   container_name: app-proxy
-  #   restart: unless-stopped
-  #   volumes:
-  #     - ./nginx.conf:/etc/nginx/conf.d/default.conf
-  #   ports:
-  #     - "8080:80"
-  #     - "443:443"
-  #   networks:
-  #     - proxy_net
-  #   depends_on:
-  #     - client
+  proxy:
+    image: nginx:alpine
+    container_name: app-proxy
+    restart: unless-stopped
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "80:80"
+    networks:
+      - proxy_net
+    depends_on:
+      - client
 networks:
   proxy_net:
   frontend_net:
