--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,7 @@ server {
   }
 
   location / {
-    proxy_pass http://client;
+    proxy_pass http://client:8080;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
